[package]
name = "na"
version = "0.1.0"
authors = ["srdja <i@srdja.me>"]
build = "build.rs"

[dependencies]
mime = "0.1.3"
getopts = "*"
regex = "*"
mustache = "*"
get_if_addrs = "0.4.0"
multipart = "*"

[dependencies.hyper]
version = "0.8.1"
default-features = false

[dependencies.url]
git = "https://github.com/servo/rust-url"

[build-dependencies]
gcc = "*"
