[package]
name = "na"
version = "0.2.0"
authors = ["srdja <sp@srdja.me>"]
build = "build.rs"

[dependencies]
mime = "0.1.3"
getopts = "0.2.21"
regex = "1.4.2"
mustache = "0.9.0"
get_if_addrs = "0.4.0"
chrono = "0.2"
rustc-serialize = "0.3.24"
percent-encoding = "2.1.0"

[dependencies.multipart]
git = "https://github.com/srdja/multipart.git"

[dependencies.hyper]
version = "0.8"
default-features = false

[dependencies.url]
git = "https://github.com/servo/rust-url"

[dependencies.hyper-router]
git = "https://github.com/srdja/hyper-router.git"
branch = "hyper-handler"

[build-dependencies]
gcc = "*"
